syntax = "proto3";

package denseid.enrollment.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dense-identity/denseid/api/go/enrollment/v1;enrollmentpb";

service EnrollmentService {
  rpc EnrollSubscriber(EnrollmentRequest) returns (EnrollmentResponse);
}

message DisplayInformation {
  string name = 1;
  string logo_url = 2;
  string website_url = 3;
  string brand_color = 4;
  string tagline = 5;
}

message EnrollmentRequest {
  string tn = 1;
  repeated bytes public_keys = 2;
  DisplayInformation iden = 3;
  uint32 n_bio = 4;
  repeated bytes auth_sigs = 5;
  string nonce = 6;
}

message EnrollmentResponse {
  string eid = 1;
  google.protobuf.Timestamp exp = 2;
  bytes usk = 3;
  bytes gpk = 4;
  bytes public_key = 5;
  bytes sigma = 6;
}
